<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Levelizer</string>

    <string name="notification_text">Levelizer is running; tap to stop</string>

    <string name="accessibility_service_description">Levelizer aides you in taking level photos through haptic feedback.\n\nThis accessibility service is used to react when a whitelisted camera app is opened.</string>

    <string name="about_title">About Levelizer</string>
    <string name="about_action">About</string>
    <string name="about_description">Levelizer aides you in taking level photos through haptic feedback. When using your favorite camera app, Levelizer will gently buzz until you\'re holding your phone straight.</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_source">Source</string>
    <string name="about_version">Version</string>
    <string name="version">%1$s(r%2$d)</string>

    <string name="accessibility_description">Levelizer needs accessibility permissions in order to work. Please enable it.</string>
    <string name="accessibility_enable">Enable accessibility service</string>

    <string name="overlay_description">In order to enable a screen overlay to toggle Levelizer from your camera, it needs permission to draw over other apps.</string>
    <string name="overlay_enable">Enable overlay</string>
    <string name="overlay_arrows">Display an orientation arrows on top of your camera app</string>
    <string name="overlay_toggle">Provide a button on top of your camera app to disable Levelizer</string>

    <string name="enable">Enable Levelizer</string>

    <string name="vibration_value">Haptic feedback: <xliff:g example="low" id="feedback_strength">%1$s</xliff:g></string>
    <string name="vibration_0">none</string>
    <string name="vibration_1">low</string>
    <string name="vibration_2">medium</string>
    <string name="vibration_3">high</string>

    <string name="tolerance_value">Tolerance: <xliff:g example="3" id="degrees">%1$d</xliff:g>°</string>

    <string name="instruction1">In the following screen, locate Levelizer under accessibility services and tap on it.</string>
    <string name="instruction2">Flip the switch to the on position and you\'re done!</string>
    <string name="instructions_continue">Continue</string>
    <string name="instructions_done">Got it!</string>
    <string name="instructions_success">You\'re done! Levelizer will now give haptic feedback for camera apps on your whitelist.</string>
    <string name="instructions_great">Great!</string>

    <string name="onboarding_whitelist">Add apps to the list of known camera apps.</string>
    <string name="whitelist_explanation">Add camera apps to this list to make sure Levelizer provides feedback while they\'re running.</string>
    <string name="camera_whitelist">Camera list</string>
    <string name="whitelist_is_empty">Camera list is empty</string>
    <string name="not_installed">This app is not installed</string>
    <string name="app_list">App list</string>
    <string name="app_list_empty">No apps found.</string>
    <string name="app_list_denied">Application listing was denied</string>

    <string name="add_app_explanation">Select one of the following apps that uses the camera permission:</string>
    <string name="install">Install app</string>
    <string name="launch">Launch app</string>
    <string name="remove">Remove from whitelist</string>
</resources>
