<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical">

        <include layout="@layout/in_introduction"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/ic_error_compat"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_error_compat"
                    android:text="@string/accessibility_description"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_service"
                    style="@style/Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accessibility_enable"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Levelizer is currently enabled."
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:visibility="gone"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_toggle"
                    style="@style/Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Disable"
                    android:visibility="gone"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/overlay_description"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_overlay"
                    style="@style/Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overlay_enable"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_overlay_arrows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/overlay_arrows"
                    android:visibility="gone"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_overlay_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/overlay_toggle"
                    android:visibility="gone"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_whitelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/onboarding_whitelist"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_whitelist"
                    style="@style/Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_whitelist"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
