<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginRight="16dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_launcher_large"
                    tools:ignore="ContentDescription,RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_description"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"/>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="8dp"/>

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_accessibility"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enable"/>

            <TextView
                android:id="@+id/tv_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Levelizer is currently enabled."
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Disable"
                android:visibility="gone"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_whitelist"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_whitelist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/camera_whitelist"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
